修正加粗问题

--- a/docs/part1/01.md
+++ b/docs/part1/01.md
@@ -318,10 +318,10 @@ assert(m_4xMsaaQuality > 0);
 
 ## DXGI交换链
 
-**DXGI交换链(`IDXGISwapChain`)**缓存了一个或多个表面(2D纹理)，它们都可以称作后备缓冲区(backbuffer)。后备缓冲区则是我们主要进行渲染的场所，我们可以将这些缓冲区通过合适的手段成为渲染管线的输出对象。在进行呈现(Present)的时候有两种方法：
+**DXGI交换链**(`IDXGISwapChain`)缓存了一个或多个表面(2D纹理)，它们都可以称作后备缓冲区(backbuffer)。后备缓冲区则是我们主要进行渲染的场所，我们可以将这些缓冲区通过合适的手段成为渲染管线的输出对象。在进行呈现(Present)的时候有两种方法：
 
-1. **BitBlt Model(位块传输模型)**：将后备缓冲区的数据进行BitBlt(位块传输，即内容上的拷贝)，传入到DWM与DX共享的后备缓冲区，然后进行翻转以显示其内容。使用这种模型至少需要一个后备缓冲区。事实上，这也是Win32应用程序最常使用的方式，在进行呈现后，渲染管线仍然是对同一个后备缓冲区进行输出。（支持Windows 7及更高版本）
-2. **Flip Model(翻转模型)**：该模型可以避免上一种方式多余的复制，后备缓冲区表面可以直接与DWM内的前台缓冲区进行翻转。但是需要创建至少两个后备缓冲区，并且在每次完成呈现后通过代码切换到另一个后备缓冲区进行渲染。该模型可以用于Win32应用程序以及UWP应用程序（需要DXGI1.2，支持Windows 8及更高版本）
+1. **BitBlt Model（位块传输模型）**：将后备缓冲区的数据进行BitBlt(位块传输，即内容上的拷贝)，传入到DWM与DX共享的后备缓冲区，然后进行翻转以显示其内容。使用这种模型至少需要一个后备缓冲区。事实上，这也是Win32应用程序最常使用的方式，在进行呈现后，渲染管线仍然是对同一个后备缓冲区进行输出。（支持Windows 7及更高版本）
+2. **Flip Model（翻转模型）**：该模型可以避免上一种方式多余的复制，后备缓冲区表面可以直接与DWM内的前台缓冲区进行翻转。但是需要创建至少两个后备缓冲区，并且在每次完成呈现后通过代码切换到另一个后备缓冲区进行渲染。该模型可以用于Win32应用程序以及UWP应用程序（需要DXGI1.2，支持Windows 8及更高版本）
 
 ![](../assets/01/02.png)
 
@@ -389,17 +389,17 @@ else
 ```cpp
 typedef struct DXGI_SWAP_CHAIN_DESC1
 {
-    UINT Width;                        // 分辨率宽度
+    UINT Width;                     // 分辨率宽度
     UINT Height;                    // 分辨率高度
-    DXGI_FORMAT Format;                // 缓冲区数据格式
+    DXGI_FORMAT Format;             // 缓冲区数据格式
     BOOL Stereo;                    // 忽略    
     DXGI_SAMPLE_DESC SampleDesc;    // 采样描述
-    DXGI_USAGE BufferUsage;            // 缓冲区用途
-    UINT BufferCount;                // 缓冲区数目
-    DXGI_SCALING Scaling;            // 忽略
+    DXGI_USAGE BufferUsage;         // 缓冲区用途
+    UINT BufferCount;               // 缓冲区数目
+    DXGI_SCALING Scaling;           // 忽略
     DXGI_SWAP_EFFECT SwapEffect;    // 交换效果
-    DXGI_ALPHA_MODE AlphaMode;        // 忽略
-    UINT Flags;                        // 使用DXGI_SWAP_CHAIN_FLAG枚举类型
+    DXGI_ALPHA_MODE AlphaMode;      // 忽略
+    UINT Flags;                     // 使用DXGI_SWAP_CHAIN_FLAG枚举类型
 } DXGI_SWAP_CHAIN_DESC1;
 
 typedef struct DXGI_SAMPLE_DESC
@@ -427,8 +427,8 @@ typedef struct DXGI_RATIONAL
 
 ```cpp
 HRESULT IDXGIFactory2::CreateSwapChainForHwnd(
-    IUnknown *pDevice,                        // [In]D3D设备
-    HWND hWnd,                                // [In]窗口句柄
+    IUnknown *pDevice,                         // [In]D3D设备
+    HWND hWnd,                                 // [In]窗口句柄
     const DXGI_SWAP_CHAIN_DESC1 *pDesc,        // [In]交换链描述1
     const DXGI_SWAP_CHAIN_FULLSCREEN_DESC *pFullscreenDesc,    // [In]交换链全屏描述，可选
     IDXGIOutput *pRestrictToOutput,            // [In]忽略
@@ -517,7 +517,7 @@ Direct3D 11.0下使用的创建方法为`IDXGIFactory::CreateSwapChain`：
 
 ```cpp
 HRESULT IDXGIFactory::CreateSwapChain(
-    IUnknown *pDevice,                    // [In]D3D设备
+    IUnknown *pDevice,                  // [In]D3D设备
     DXGI_SWAP_CHAIN_DESC *pDesc,        // [In]交换链描述
     IDXGISwapChain **ppSwapChain);      // [Out]输出交换链对象
 ```
