--- a/docs/part1/02.md
+++ b/docs/part1/02.md
@@ -302,7 +302,7 @@ typedef struct D3D11_BUFFER_DESC
 而对于`D3D11_USAGE_DYNAMIC`类型的缓冲区，则应当使用`ID3D11DeviceContext::Map`和`ID3D11DeviceContext::Unmap`方法，将显存中的数据映射到内存中，然后修改该片内存的数据，最后将修改好的数据映射回显存中。这种更新方式我们是可以直接获取来自显存的数据的，但代价就是更新的效率会比上面的方式更低一些。
 
 
-**由于目前的教程所涉及到的顶点缓冲区在创建后通常是不会修改的，因此将其设为`D3D11_USAGE_IMMUTABLE`**。
+**由于目前的教程所涉及到的顶点缓冲区在创建后通常是不会修改的，因此将其设为**`D3D11_USAGE_IMMUTABLE`。
 
 这里将创建包含三个顶点数据的缓冲区：
 
