--- a/docs/part1/04.md
+++ b/docs/part1/04.md
@@ -163,12 +163,12 @@ $$
 
 仿射变换是由一个线性变换与一个平移变换组合而成的。对于向量而言，平移操作是没有意义的，因为向量只描述方向与大小、却与位置无关，即平移操作不应作用于向量。因此，平移变换只能应用于点（位置向量）。**齐次坐标（homogeneous coordinate）**所提供的表示机制，使我们可以方便地对点和向量进行统一的处理。在采用其次坐标表示法时，我们将坐标扩充为四元组，第四个坐标w的取值将根据被描述对象是点还是向量而定：
 
-1. **(x, y, z, 0)表示向量**
-2. **(x, y, z, 1)表示点**
+1. $(x, y, z, 0)$**表示向量**
+2. $(x, y, z, 1)$**表示点**
 
 >  注意：这种表示法可以很方便地表示两个坐标点之差即为一个向量（w分量为0），以及表示一个点与一个向量之和为一个点（w分量为1）
 
-3. **(x, y, z, w)和(x/w, y/w, z/w, 1)都表示同一个点(w≠0)，这对于后续做透视投影会用到这个性质**
+3. $(x, y, z, w)$和$(x/w, y/w, z/w, 1)$都表示同一个点$(w\neq 0)$，这对于后续做透视投影会用到这个性质
 
 ### 仿射变换的定义及矩阵表示
 
@@ -194,13 +194,13 @@ t_x & t_y & t_z & 1 \\
 $$
 
 
-若把w改成0，它就不会受到向量**t**平移的影响。
+若把w改成0，它就不会受到向量$\mathbf{t}$平移的影响。
 
 
 
 ### 平移
 
-现在将平移变换定义为仿射变换。若要利用向量**t**对坐标点**u**进行平移，则这种变换矩阵可以表示为：
+现在将平移变换定义为仿射变换。若要利用向量$\mathbf{t}$对坐标点$\mathbf{u}$进行平移，则这种变换矩阵可以表示为：
 
 $$
 \mathbf{T}=\begin{bmatrix} 
@@ -212,7 +212,7 @@ t_x & t_y & t_z & 1 \\
 $$
 
 
-平移矩阵的逆矩阵表示平移的逆操作，即为利用向量**-t**对坐标点**u**进行平移：
+平移矩阵的逆矩阵表示平移的逆操作，即为利用向量$-\mathbf{t}$对坐标点进$\mathbf{u}$行平移：
 
 $$
 \mathbf{T^{-1}}=\begin{bmatrix} 
