--- a/docs/part1/08.md
+++ b/docs/part1/08.md
@@ -1,6 +1,9 @@
 # 前言
 
-**注意：从这一章起到后面的所有项目无一例外都利用了Direct2D与Direct3D互操作性，但系统要求为Win10, Win8.x 或 Win7 SP1且安装了KB2670838补丁以支持Direct3D 11.1(DXGI1.2)。否则将无法显示所有文本。如果你的Win7系统运行程序无法显示文本，强烈建议打上上述补丁**
+> **注意**：
+>
+> 1. 如果使用ImGui（开启`USE_IMGUI`宏）的话，这一章的内容可以跳过
+> 2. 若需要使用D2D绘制文字的话，系统要求为Win10, Win8.x 或 Win7 SP1且安装了KB2670838补丁以支持Direct3D 11.1(DXGI1.2)。否则将无法显示所有文本。如果你的Win7系统运行程序无法显示文本，则强烈建议打上上述补丁
 
 在DX11，要显示文字可以说是一件比较麻烦的事情。DX9诸如`Id3dXFont`用于显示文字的接口类都已经被抛弃掉了。目前行之有效的两种显示文字的方法如下：
 
