--- a/docs/part2/12.md
+++ b/docs/part2/12.md
@@ -592,7 +592,7 @@ m_Mirror.Draw(m_pd3dImmediateContext.Get());
 
 ### 第2步：绘制不透明的镜面反射物体
 
-理论上会有三面墙和地板可能会透过镜面看到，这里都需要绘制，但要注意在对顶点位置做反射变换时，原来平面向外的法向量变成了平面向内部，**因此还需要额外对法向量做反射变换(龙书缺少了对法向量的反射变换)**。并且原来按顺时针排布的三角形顶点也变成了逆时针排布。所以需要对顺时针排布的顶点做裁剪处理。
+理论上会有三面墙和地板可能会透过镜面看到，这里都需要绘制，但要注意在对顶点位置做反射变换时，原来平面向外的法向量变成了平面向内部，**因此还需要额外对法向量做反射变换（龙书缺少了对法向量的反射变换）**。并且原来按顺时针排布的三角形顶点也变成了逆时针排布。所以需要对顺时针排布的顶点做裁剪处理。
 
 ![](..\assets\12\04.png)
 
