--- a/docs/part2/23.md
+++ b/docs/part2/23.md
@@ -18,7 +18,7 @@
 
 ## 资源视图(Resource Views)回顾
 
-由于动态天空盒的实现同时要用到**渲染目标视图(Render Target View)**、**深度模板视图(Depth Stencil View)**和**着色器资源视图(Shader Resource View)**，这里再进行一次回顾。
+由于动态天空盒的实现同时要用到**渲染目标视图（Render Target View）**、**深度模板视图（Depth Stencil View）**和**着色器资源视图（Shader Resource View）**，这里再进行一次回顾。
 
 由于资源(`ID3D11Resource`)本身的类型十分复杂，比如一个`ID3D11Texture2D`本身既可以是一个纹理，也可以是一个纹理数组，但纹理数组在元素个数为6时有可能会被用作立方体纹理，就这样直接绑定到渲染管线上是无法确定它本身究竟要被用作什么样的类型的。比如说作为着色器资源，它可以是`Texture2D`, `Texture2DArray`, `TextureCube`的任意一种。
 
