--- a/docs/part2/25.md
+++ b/docs/part2/25.md
@@ -174,7 +174,7 @@ struct VertexPosNormalTangentTex
 
 通常顶点提供的**N**和**T**通常是相互垂直的，并且都是单位向量，我们可以通过计算$\mathbf{B} = \mathbf{N} \times \mathbf{T}$来得到副法线向量**B**，使得顶点可以不需要存放副法线向量**B**。但是经过插值计算后的**N**和**T**可能会导致不是相互垂直，我们最好还是要通过施密特正交化来获得实际的切线空间。
 
-现在已知互不垂直的**N**向量和**T**向量，我们希望求出与**N**向量垂直的**T'**向量，需要将**T**向量投影到**N**向量上。
+现在已知互不垂直的**N**向量和**T**向量，我们希望求出与**N**向量垂直的$\mathbf{T}'$向量，需要将**T**向量投影到**N**向量上。
 
 ![](..\assets\25\07.png)
 
