--- a/docs/part3/27.md
+++ b/docs/part3/27.md
@@ -405,25 +405,25 @@ void GameApp::GPUSort()
 
 最后是`std::sort`和双调排序(使用NVIDIA GTX 850M)的比较结果：
 
-| **元素数目** | **CPU****排序(s)** | **GPU****排序(s)** | **GPU****排序+写回内存总时(s)** |
-| ------------ | ------------------ | ------------------ | ------------------------------- |
-| 512          | 0.000020           | 0.000003           | 0.000186                        |
-| 1024         | 0.000043           | 0.000007           | 0.000226                        |
-| 2048         | 0.000102           | 0.000009           | 0.000310                        |
-| 4096         | 0.000245           | 0.000009           | 0.000452                        |
-| 8192         | 0.000512           | 0.000010           | 0.000771                        |
-| 16384        | 0.001054           | 0.000012           | 0.000869                        |
-| 32768        | 0.002114           | 0.000012           | 0.001819                        |
-| 65536        | 0.004448           | 0.000014           | 0.002625                        |
-| 131072       | 0.009600           | 0.000015           | 0.005130                        |
-| 262144       | 0.021555           | 0.000021           | 0.008983                        |
-| 524288       | 0.048621           | 0.000030           | 0.015652                        |
-| 1048576      | 0.111219           | 0.000044           | 0.040927                        |
-| 2097152      | 0.257118           | 0.000072           | 0.188662                        |
-| 4194304      | 0.444995           | 0.000083           | 0.300240                        |
-| 8388608      | 0.959173           | 0.000124           | 0.465746                        |
-| 16777216     | 2.178453           | 0.000177           | 0.915898                        |
-| 33554432     | 5.869439           | 0.000361           | 2.269989                        |
+| **元素数目** | **CPU排序（s）** | **GPU排序（s）** | **GPU排序+写回内存总时（s）** |
+| ------------ | ---------------- | ---------------- | ----------------------------- |
+| 512          | 0.000020         | 0.000003         | 0.000186                      |
+| 1024         | 0.000043         | 0.000007         | 0.000226                      |
+| 2048         | 0.000102         | 0.000009         | 0.000310                      |
+| 4096         | 0.000245         | 0.000009         | 0.000452                      |
+| 8192         | 0.000512         | 0.000010         | 0.000771                      |
+| 16384        | 0.001054         | 0.000012         | 0.000869                      |
+| 32768        | 0.002114         | 0.000012         | 0.001819                      |
+| 65536        | 0.004448         | 0.000014         | 0.002625                      |
+| 131072       | 0.009600         | 0.000015         | 0.005130                      |
+| 262144       | 0.021555         | 0.000021         | 0.008983                      |
+| 524288       | 0.048621         | 0.000030         | 0.015652                      |
+| 1048576      | 0.111219         | 0.000044         | 0.040927                      |
+| 2097152      | 0.257118         | 0.000072         | 0.188662                      |
+| 4194304      | 0.444995         | 0.000083         | 0.300240                      |
+| 8388608      | 0.959173         | 0.000124         | 0.465746                      |
+| 16777216     | 2.178453         | 0.000177         | 0.915898                      |
+| 33554432     | 5.869439         | 0.000361         | 2.269989                      |
 
 
 可以初步看到双调排序的排序用时比较稳定，而快速排序明显随元素数目增长而变慢。当然，如果GPU排序的数据量再更大一些的话，可以看到时间的明显增长。
