--- a/docs/part3/33.md
+++ b/docs/part3/33.md
@@ -308,7 +308,7 @@ float4 DS(QuadPatchTess patchTess,
 
 ![](..\assets\33\18.png)
 
-从底端的这些控制点选取其中一个然后不断往上走，最终走到顶端点的过程中，如果走过一段朝着右上方向的路径，则给该控制点乘上因子**(1-t)**，而朝着左上方向的路径则给该控制点乘上因子**t**。比如从**b0**走到顶端的项为$t^3 b_{0}$。我们将这所有8条路径都加起来就可以得到最后的结果：
+从底端的这些控制点选取其中一个然后不断往上走，最终走到顶端点的过程中，如果走过一段朝着右上方向的路径，则给该控制点乘上因子$(1-t)$，而朝着左上方向的路径则给该控制点乘上因子**t**。比如从走$b_0$到顶端的项为$t^3 b_{0}$。我们将这所有8条路径都加起来就可以得到最后的结果：
 $$
 \mathbf{b_0^3} = (1-t)^3\mathbf{b_0} + 3t(1-t)^2\mathbf{b_1} + 3t^2 (1-t)\mathbf{b_2} +  t^3\mathbf{b_3}
 $$
@@ -448,7 +448,7 @@ float4 DS(IsolinePatchTess patchTess,
 
 ![](..\assets\33\22.png)
 
-这里就不再列出复杂的公式来晕人了。在一维情况下，贝塞尔曲线使用范围在`[0, 1]`的参数**t**来表示曲线上一点。那么在二维情况下，我们可以使用范围在`[0, 1]`的参数**(u, v)**来表示曲面上一点。
+这里就不再列出复杂的公式来晕人了。在一维情况下，贝塞尔曲线使用范围在`[0, 1]`的参数**t**来表示曲线上一点。那么在二维情况下，我们可以使用范围在`[0, 1]`的参数$(u,v)$来表示曲面上一点。
 
 首先对于这4条横向的贝塞尔曲线，我们分别使用参数u代入来求得四个点，这四个顶点按列顺序构成新的控制点，然后问题就转化成了在这四个控制点构成的贝塞尔曲线中求其中一点。然后我们再用参数v代入就可以求得最终在曲面上的一点。
 
