--- a/docs/part3/35.md
+++ b/docs/part3/35.md
@@ -55,7 +55,7 @@ struct Particle
 
 我们将会让粒子以物理上的真实方式进行运动。为了简便，我们将限制粒子的加速度为恒定常数。例如，让加速度取决于重力，又或者是纯粹的风力。此外，我们不对粒子做任何的碰撞检测。
 
-设**p(t)**为粒子在t时刻的位置，它的运动轨迹为一条光滑曲线。它在t时刻的瞬时速度为：
+设$p(t)$为粒子在t时刻的位置，它的运动轨迹为一条光滑曲线。它在t时刻的瞬时速度为：
 $$
 \mathbf{v}(t)=\mathbf{p'}(t)
 $$
@@ -68,14 +68,14 @@ $$
 \int\mathbf{f(t)}dt=\mathbf{F}(t) + C\\
 [\mathbf{F}(t)+C]'=\mathbf{f}(t)
 $$
-连续函数**f(t)**的不定积分得到的函数有无限个，即C可以为任意常数，这些函数求导后可以还原回**f(t)**
+连续函数$f(t)$的不定积分得到的函数有无限个，即C可以为任意常数，这些函数求导后可以还原回$f(t)$
 
 通过对速度求不定积分就可以得到位置函数，对加速度求则得到的是速度函数：
 $$
 \mathbf{p}(t)=\int\mathbf{v}(t)dt\\
 \mathbf{v}(t)=\int\mathbf{a}(t)dt\\
 $$
-现在设加速度**a(t)**是一个恒定大小，方向，不随时间变化的函数，并且我们知道t=0时刻的初始位置**p0**和初始速度**v0**。因此速度函数可以写作：
+现在设加速度$a(t)$是一个恒定大小，方向，不随时间变化的函数，并且我们知道t=0时刻的初始位置$p_0$和初始速度$v_0$。因此速度函数可以写作：
 $$
 \mathbf{v}(t)=\int\mathbf{a}(t)dt=t\cdot\mathbf{a} + \mathbf{c}
 $$
@@ -87,15 +87,15 @@ $$
 $$
 \mathbf{v}(t) =t\cdot\mathbf{a} + \mathbf{v_0}
 $$
-继续积分并代入**p(0)**，我们可以求出位置函数：
+继续积分并代入$p(0)$，我们可以求出位置函数：
 $$
 \mathbf{p}(t) = \frac{1}{2}t^2\mathbf{a}+t\mathbf{v_0}+\mathbf{p_0}
 $$
-换句话说，粒子的运动轨迹**p(t)  (t>=0)**完全取决于初始位置、初始速度和恒定加速度。只要知道了这些参数，我们就可以画出它的运动轨迹了。因为它是关于t的二次函数，故它的运动轨迹一般为抛物线。
+换句话说，粒子的运动轨迹$p(t),t\geq 0$完全取决于初始位置、初始速度和恒定加速度。只要知道了这些参数，我们就可以画出它的运动轨迹了。因为它是关于t的二次函数，故它的运动轨迹一般为抛物线。
 
-若令**a=(0, -9.8, 0)**，则物体的运动可以看做仅仅受到了重力的影响。
+若令$a=(0, -9.8, 0)$，则物体的运动可以看做仅仅受到了重力的影响。
 
-> 注意：你也可以选择不使用上面导出的函数。如果你已经知道了粒子的运动轨迹函数**p(t)**，你也可以直接用到你的程序当中。比如椭圆的参数方程等。
+> 注意：你也可以选择不使用上面导出的函数。如果你已经知道了粒子的运动轨迹函数$p(t)$，你也可以直接用到你的程序当中。比如椭圆的参数方程等。
 
 # 随机性
 
