--- a/docs/part3/36.md
+++ b/docs/part3/36.md
@@ -758,9 +758,9 @@ m_pd3dImmediateContext->SetDepthStencilState(RenderStates::DSSGreaterEqual.Get()
 
 # 多重采样
 
-首先复习一下**超采样(SSAA)**。现渲染WxH大小的屏幕，为了降低走样/锯齿的影响，可以使用2倍宽高的后备缓冲区及深度缓冲区，光栅化的操作量增大到了4倍左右，同样像素着色器的执行次数也增大到了原来的4倍左右。每个2x2的像素块对应原来的1个像素，通过对这2x2的像素块求平均值得到目标像素的颜色。
+首先复习一下**超采样（SSAA）**。现渲染WxH大小的屏幕，为了降低走样/锯齿的影响，可以使用2倍宽高的后备缓冲区及深度缓冲区，光栅化的操作量增大到了4倍左右，同样像素着色器的执行次数也增大到了原来的4倍左右。每个2x2的像素块对应原来的1个像素，通过对这2x2的像素块求平均值得到目标像素的颜色。
 
-**多重采样(MSAA)**采用的是一种较为折中的方案。以4xMSAA为例，指的是单个像素需要按特定的模式对周围采样4次：
+**多重采样（MSAA）**采用的是一种较为折中的方案。以4xMSAA为例，指的是单个像素需要按特定的模式对周围采样4次：
 
 ![](..\assets\36\12.png)
 
