--- a/docs/part2/19.md
+++ b/docs/part2/19.md
@@ -2,7 +2,7 @@
 
 一个模型通常是由三个部分组成：网格、纹理、材质。在一开始的时候，我们是通过Geometry类来生成简单几何体的网格。但现在我们需要寻找合适的方式去表述一个复杂的网格，而且包含网格的文件类型多种多样，对应的描述方式也存在着差异。这一章我们主要研究obj格式文件的读取。
 
-**因为精力问题无法对obj做完整支持，如果需要读取obj格式的模型文件，推荐各位使用[ASSIMP库](https://github.com/assimp/assimp)https://github.com/tinyobjloader/tinyobjloader)**，不排除后续翻新代码。目前在36章以后的项目使用了assimp来读取obj文件，具体见Common文件夹的GameObject类。
+**因为精力问题无法对obj做完整支持，如果需要读取obj格式的模型文件，推荐各位使用**[**ASSIMP库**](https://github.com/assimp/assimp)，不排除后续翻新代码。目前在36章以后的项目使用了assimp来读取obj文件，具体见Common文件夹的GameObject类。
 
 # .obj格式
 
