--- a/docs/prepare/02.md
+++ b/docs/prepare/02.md
@@ -141,7 +141,7 @@ set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE
 # ShaderType为右边任意一种：VS, vs, HS, hs, DS, ds, GS, gs, PS, ps, CS, cs
 #
 
-# target_sources(${TARGET_NAME} ${HLSL_FILES})
+# target_sources(${TARGET_NAME} PRIVATE ${HLSL_FILES})
 # file(GLOB HLSL_FILES ${HLSL_DIR}/*.hlsl)
 # foreach(HLSL_FILE ${HLSL_FILES})
 #     get_filename_component(HLSL_FDIR ${HLSL_FILE} DIRECTORY)
